manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://learn-voyage-frontend-jamseer-m-cs-projects.vercel.app"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "learn-voyage-chat-service"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: jamsheerply.life
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: learn-voyage-auth-service
                port:
                  number: 3001
          - path: /api/chat-service
            pathType: Prefix
            backend:
              service:
                name: learn-voyage-chat-service
                port:
                  number: 4001
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: learn-voyage-chat-service
                port:
                  number: 4001
          - path: /api/content-management
            pathType: Prefix
            backend:
              service:
                name: learn-voyage-content-management-service
                port:
                  number: 5001
          - path: /api/notification
            pathType: Prefix
            backend:
              service:
                name: learn-voyage-notification-service
                port:
                  number: 6001
          - path: /api/payment-service
            pathType: Prefix
            backend:
              service:
                name: learn-voyage-payment-service
                port:
                  number: 7001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: learn-voyage-frontend-service
                port:
                  number: 5173
